Fix directory names

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,12 +26,12 @@ jobs:
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
-            server/target/
+            backend/target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-cargo-
 
       - name: Build and test backend
-        working-directory: ./server
+        working-directory: ./backend
         run: |
           cargo build
           cargo clippy --no-deps
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build and test frontend
-        working-directory: ./client
+        working-directory: ./frontend
         run: |
           npm install
           npm run build
